Fixed overflow issues of menus

--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,9 @@ a {
     color: palevioletred;
 }
 
-p {
-    line-height: 5px;
+.main-content p {
+    margin: 0 auto;
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -101,6 +102,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     background-color: #FEBEC1;
     box-shadow: 0 1px 10px 1px #626262;
+    color: black;
 }
 
 .nav-toggle{
@@ -133,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .intro-title{
-    margin: auto  0; 
+    margin: auto 0; 
 }
 
 .explore-btn {
@@ -168,6 +170,7 @@ h1, h2, h3, h4, h5, h6 {
 .occasion-card{
     padding: 15px;
     box-shadow: 2px 2px 4px 1px pink;
+    margin-top:  15px;
 }
 
 /* specials */
@@ -175,14 +178,16 @@ h1, h2, h3, h4, h5, h6 {
     width: 200px;
     height: 250px;
     padding: 10px 10px 30px;
+    margin: 10px auto 0;
 }
 
 .menu-container{
     text-align: center;
-    height: 95vh;
     margin: auto 0;
+    padding: 50px 0 10px;
     background-color: #F7F4F4;
     z-index: -1;
+    justify-content: center;
 }
 
 /* Reviews */
